--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     hibernate:
       ddl-auto: create
     show-sql: true
+
+logging:
+  level:
+    org.springframework.jdbc.core.JdbcTemplate: trace
